objects/ERN__c.object
<CustomObject>
    <description>Engineering Review Note</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ERN</relationshipLabel>
        <relationshipName>ERN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Sales_Order_Number__c</fullName>
        <formula>Asset__r.Sales_Order_Number__c</formula>
        <label>Asset Sales Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Serial_Number__c</fullName>
        <formula>Asset__r.SerialNumber</formula>
        <label>Asset Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Shipped_Date__c</fullName>
        <formula>Asset__r.Date_Shipped__c</formula>
        <label>Asset Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master Asset for which ERN is generated.</description>
        <inlineHelpText>Master Asset for which ERN is generated.</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>ERN</relationshipLabel>
        <relationshipName>ERN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSD_Remarks__c</fullName>
        <description>CSD Remarks updated from ERN Approval Line of CSD</description>
        <label>CSD Remarks</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category for Field Service ERNs.</description>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IU conversion</fullName>
                </value>
                <value>
                    <fullName>Hydro Motor</fullName>
                </value>
                <value>
                    <fullName>Pump</fullName>
                </value>
                <value>
                    <fullName>Power pack replacement</fullName>
                </value>
                <value>
                    <fullName>Drive/Motor</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Air Ejection</fullName>
                </value>
                <value>
                    <fullName>Back pressure</fullName>
                </value>
                <value>
                    <fullName>Robot</fullName>
                </value>
                <value>
                    <fullName>RMS</fullName>
                </value>
                <value>
                    <fullName>OPC</fullName>
                </value>
                <value>
                    <fullName>MGO</fullName>
                </value>
                <value>
                    <fullName>Ejector</fullName>
                </value>
                <value>
                    <fullName>EOF</fullName>
                </value>
                <value>
                    <fullName>Hopper/Sliding assembly</fullName>
                </value>
                <value>
                    <fullName>Part separator</fullName>
                </value>
                <value>
                    <fullName>Part drop detect</fullName>
                </value>
                <value>
                    <fullName>Auxiliary interface</fullName>
                </value>
                <value>
                    <fullName>Gate &amp; Gate Frame</fullName>
                </value>
                <value>
                    <fullName>Mould Height Reduction</fullName>
                </value>
                <value>
                    <fullName>RAM spacer</fullName>
                </value>
                <value>
                    <fullName>Retrofitment-Control</fullName>
                </value>
                <value>
                    <fullName>Retrofitment-Servo</fullName>
                </value>
                <value>
                    <fullName>Retrofitment/Refurbishment</fullName>
                </value>
                <value>
                    <fullName>Heater &amp; Heater blowers</fullName>
                </value>
                <value>
                    <fullName>Increase Mould Carrying Capacity</fullName>
                </value>
                <value>
                    <fullName>NSOV</fullName>
                </value>
                <value>
                    <fullName>Electrical part replacement</fullName>
                </value>
                <value>
                    <fullName>Heat Exchanger</fullName>
                    <isActive>false</isActive>
                    <label>Heat Exchanger</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_on__c</fullName>
        <description>Closed on data when ERN will be closed.</description>
        <inlineHelpText>Closed on data when ERN will be closed.</inlineHelpText>
        <label>Closed on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Control_Rack_Details__c</fullName>
        <description>Control Rack Details/95_1 Page</description>
        <inlineHelpText>Control Rack Details/95_1 Page</inlineHelpText>
        <label>Control Rack Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>Created Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Accepted__c</fullName>
        <label>Customer Accepted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drop_Reason__c</fullName>
        <inlineHelpText>If ERN Status will Drop</inlineHelpText>
        <label>Drop Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERN_Close_Time_Days__c</fullName>
        <formula>Closed_on__c  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERN Close Time(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERN_Number__c</fullName>
        <description>Auto number of ERN with Year and Month Combination.</description>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>ERN Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ERN_Price__c</fullName>
        <description>ERN Price entered by Costing Department.</description>
        <label>ERN Price</label>
        <summarizedField>ERN_Approval__c.ERN_Price__c</summarizedField>
        <summaryForeignKey>ERN_Approval__c.ERN__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ERN_to_Order_Conversion_Status__c</fullName>
        <formula>IF( ISPICKVAL(Customer_Accepted__c , &quot;Yes&quot;),&quot;ERN Converted into Order&quot;,
     IF(ISPICKVAL(Customer_Accepted__c , &quot;No&quot;),&quot;ERN Not Converted into Order&quot;,
     IF(ISBLANK(TEXT(Customer_Accepted__c)), &quot;Pending Response From Customer&quot;,&quot;None&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERN to Order Conversion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Circuit_Number__c</fullName>
        <description>Electrical Circuit Number</description>
        <inlineHelpText>Electrical Circuit Number</inlineHelpText>
        <label>Electrical Circuit Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Closed_Date__c</fullName>
        <inlineHelpText>This closed date only comes when Maine ERN will closed by Engineerin Team (Mechanical ,  Hydraulic , Software , Electrical )</inlineHelpText>
        <label>Engineering Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Air_Ejection__c</fullName>
        <label>Existing Air Ejection</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Control__c</fullName>
        <label>Existing Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Core__c</fullName>
        <label>Existing Core</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_MGO__c</fullName>
        <label>Existing MGO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_ERN_Price__c</fullName>
        <description>Final ERN Price 
1) Updated from ERN Approval Line of costing for Sales ERN 
2) Updated from ERN Approval Line of CSD for Service ERN</description>
        <label>Final ERN Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GM_Email__c</fullName>
        <description>This field is used to populate General Manager&apos;s email address. This is mostly going to use for India Delhi and South Region Head email address.</description>
        <label>GM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hydraulic_Circuit_Number__c</fullName>
        <description>Hydraulic Circuit Number of Asset.</description>
        <inlineHelpText>Hydraulic Circuit Number of Asset.</inlineHelpText>
        <label>Hydraulic Circuit Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Injection_Unit__c</fullName>
        <label>Injection Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <inlineHelpText>OEC Lead Time Includes Additional Part Procurement time and Engineering Lead Time.</inlineHelpText>
        <label>Lead Time(Weeks)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Modifications_in_Field_Remarks__c</fullName>
        <label>Machine Modifications in Field/Remarks</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ERN</relationshipLabel>
        <relationshipName>ERN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_With_Costing__c</fullName>
        <label>Pending With Costing</label>
        <summaryFilterItems>
            <field>ERN_Approval__c.Department__c</field>
            <operation>equals</operation>
            <value>Costing</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ERN_Approval__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>ERN_Approval__c.ERN__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pending_With_Electrical__c</fullName>
        <label>Pending With Electrical</label>
        <summaryFilterItems>
            <field>ERN_Approval__c.Department__c</field>
            <operation>equals</operation>
            <value>Electrical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ERN_Approval__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>ERN_Approval__c.ERN__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pending_With_Hydraulic__c</fullName>
        <label>Pending With Hydraulic</label>
        <summaryFilterItems>
            <field>ERN_Approval__c.Department__c</field>
            <operation>equals</operation>
            <value>Hydraulic</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ERN_Approval__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>ERN_Approval__c.ERN__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pending_With_Mechanical__c</fullName>
        <label>Pending With Mechanical</label>
        <summaryFilterItems>
            <field>ERN_Approval__c.Department__c</field>
            <operation>equals</operation>
            <value>Mechanical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ERN_Approval__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>ERN_Approval__c.ERN__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pending_With_OEC__c</fullName>
        <label>Pending With OEC</label>
        <summaryFilterItems>
            <field>ERN_Approval__c.Department__c</field>
            <operation>equals</operation>
            <value>OEC</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ERN_Approval__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>ERN_Approval__c.ERN__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pending_With_SPE__c</fullName>
        <label>Pending With SPE</label>
        <summaryFilterItems>
            <field>ERN_Approval__c.Department__c</field>
            <operation>contains</operation>
            <value>SPE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ERN_Approval__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>ERN_Approval__c.ERN__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pending_With_Software__c</fullName>
        <label>Pending With Software</label>
        <summaryFilterItems>
            <field>ERN_Approval__c.Department__c</field>
            <operation>equals</operation>
            <value>Software</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ERN_Approval__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>ERN_Approval__c.ERN__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Possibility__c</fullName>
        <label>Possibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>IF( NOT(ISBLANK( Product_Line__c )) &amp;&amp; (Product_Line__c = &quot;ELEKTRON&quot;),&quot;Electric&quot;,
IF( NOT(ISBLANK( Product_Line__c )) &amp;&amp; (Product_Line__c = &quot;HDACCU&quot; || Product_Line__c = &quot;HDSRV&quot; || Product_Line__c == &quot;HDSRV2K&quot; || Product_Line__c == &quot;HYDRN&quot; || Product_Line__c = &quot;OMG&quot; || Product_Line__c = &quot;OMG3C&quot; || Product_Line__c = &quot;OMG3CSRV&quot; || Product_Line__c = &quot;OMGBT&quot; || Product_Line__c = &quot;OMGRPVC&quot; || Product_Line__c = &quot;OMGRPVCSRV&quot; || Product_Line__c = &quot;OMGSB&quot; || Product_Line__c = &quot;OMGSBSRV&quot; || Product_Line__c = &quot;OMGSRV&quot; || Product_Line__c = &quot;OMGTC&quot; || Product_Line__c = &quot;OMGTCSRV&quot; || Product_Line__c = &quot;HDSRVRP&quot; || Product_Line__c = &quot;MH&quot; || Product_Line__c = &quot;MHT&quot;),&quot;RAM&quot;,
IF( NOT(ISBLANK( Product_Line__c )) &amp;&amp; (Product_Line__c = &quot;MAXIMA&quot; || Product_Line__c = &quot;MAXIMASRV&quot; || Product_Line__c == &quot;CMS&quot; || Product_Line__c == &quot;MPs&quot; || Product_Line__c = &quot;MPs2K&quot; || Product_Line__c = &quot;MPS2K&quot;),&quot;Maxima&quot;,
IF( NOT(ISBLANK( Product_Line__c )) &amp;&amp; (Product_Line__c = &quot;MAGTOG&quot; || Product_Line__c = &quot;MTSRV&quot; || Product_Line__c == &quot;MTACCU&quot; || Product_Line__c == &quot;MTSRV2K&quot; || Product_Line__c = &quot;MTCPVC&quot; || Product_Line__c = &quot;MTCPVCS&quot; || Product_Line__c = &quot;NVSRV&quot; || Product_Line__c = &quot;NVSRVRP&quot; || Product_Line__c = &quot;PETLINE&quot; || Product_Line__c = &quot;PETLINESRV&quot; || Product_Line__c = &quot;MTUSSRV&quot; || Product_Line__c = &quot;MTCESRV&quot; || Product_Line__c = &quot;SIG&quot; || Product_Line__c = &quot;DELTA&quot; || Product_Line__c = &quot;QTSRV&quot; || Product_Line__c == &quot;QTUSSRV&quot; || Product_Line__c == &quot;QTCESRV&quot; || Product_Line__c == &quot;QTACCU&quot;),&quot;Toggle&quot;,null))))</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Email__c</fullName>
        <label>RSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Accepted__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Lead time is high</fullName>
                    <default>true</default>
                    <label>Lead time is high</label>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Price is High</fullName>
                </value>
                <value>
                    <fullName>Project dropped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ahmedabad</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Chandigarh</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Kolkata</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Export-India</fullName>
                </value>
                <value>
                    <fullName>Haridwar</fullName>
                </value>
                <value>
                    <fullName>Vapi</fullName>
                </value>
                <value>
                    <fullName>Intercompany</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                    <isActive>false</isActive>
                    <label>Bangalore</label>
                </value>
                <value>
                    <fullName>Export</fullName>
                    <isActive>false</isActive>
                    <label>Export</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Oracle_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Oracle Quote</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can select Quote available on related Opportunity.</errorMessage>
            <filterItems>
                <field>BigMachines__Quote__c.BigMachines__Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>ERN</relationshipLabel>
        <relationshipName>ERN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <label>Request Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_Additional_Air_Ejection__c</fullName>
        <label>Required Additional Air Ejection</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Additional_Core__c</fullName>
        <label>Required Additional Core</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Additional_MGO__c</fullName>
        <label>Required Additional MGO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPE_CSD_Email_Id__c</fullName>
        <label>SPE/CSD Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPE_Email_Id__c</fullName>
        <description>SPE Email Id - Export or Domestic</description>
        <label>SPE Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Software_Version__c</fullName>
        <description>Software Version of Asset.</description>
        <inlineHelpText>Software Version of Asset</inlineHelpText>
        <label>Software Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Waiting On Information</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Drop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tonnage__c</fullName>
        <label>Tonnage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Required_Engineering_Hours__c</fullName>
        <description>Total of Required Engineering Hours of all Design ERN Approver.</description>
        <label>Total Required Engineering Hours</label>
        <summarizedField>ERN_Approval__c.Required_Engineering_Hours__c</summarizedField>
        <summaryForeignKey>ERN_Approval__c.ERN__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Review_Hours__c</fullName>
        <description>Total of Review Hours Entered on ERN Approval records.</description>
        <label>Total Review Hours</label>
        <summarizedField>ERN_Approval__c.Review_Hours__c</summarizedField>
        <summaryForeignKey>ERN_Approval__c.ERN__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Validation_Required__c</fullName>
        <inlineHelpText>Updated Based on &quot;Validation Required&quot; selected on ERN Approval lines.</inlineHelpText>
        <label>Validation Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ERN</label>
    <listViews>
        <fullName>All_Closed_ERN</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Description__c</columns>
        <columns>Possibility__c</columns>
        <columns>Customer_Accepted__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Tonnage__c</columns>
        <columns>Injection_Unit__c</columns>
        <columns>Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed ERN</label>
        <language>en_US</language>
        <sharedTo>
            <role>India_Injection_Domestic_Sales_Leader</role>
            <role>India_Injection_Export_Sales_Leader</role>
            <role>India_Injection_General_Mgr</role>
            <role>India_Injection_Service_Leader</role>
            <role>India_Injection_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_ERNs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Description__c</columns>
        <columns>Possibility__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Tonnage__c</columns>
        <columns>Injection_Unit__c</columns>
        <columns>Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,In Progress</value>
        </filters>
        <label>All Open ERNs</label>
        <language>en_US</language>
        <sharedTo>
            <role>India_Injection_Domestic_Sales_Leader</role>
            <role>India_Injection_Export_Sales_Leader</role>
            <role>India_Injection_General_Mgr</role>
            <role>India_Injection_Service_Leader</role>
            <role>India_Injection_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Sales_ERNs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Tonnage__c</columns>
        <columns>Injection_Unit__c</columns>
        <columns>Possibility__c</columns>
        <columns>Lead_Time__c</columns>
        <columns>Customer_Accepted__c</columns>
        <columns>Status__c</columns>
        <columns>Region__c</columns>
        <columns>Final_ERN_Price__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <label>All Sales ERNs</label>
        <language>en_US</language>
        <sharedTo>
            <role>India_Injection_Domestic_Sales_Eng_Ahmedabad</role>
            <role>India_Injection_Domestic_Sales_Eng_Chandigarh</role>
            <role>India_Injection_Domestic_Sales_Eng_Gujarat</role>
            <role>India_Injection_Domestic_Sales_Eng_Hydrabad</role>
            <role>India_Injection_Domestic_Sales_Eng_Mumbai</role>
            <role>India_Injection_Domestic_Sales_Eng_New_Delhi</role>
            <role>India_Injection_Domestic_Sales_Eng_Pune</role>
            <role>India_Injection_Domestic_Sales_Eng_Tamilanadu</role>
            <role>India_Injection_Domestic_Sales_Eng_Vijaynagar</role>
            <role>India_Injection_Domestic_Sales_Leader</role>
            <role>India_Injection_Export_Sales_Eng</role>
            <role>India_Injection_Export_Sales_Leader</role>
            <role>India_Injection_General_Mgr</role>
            <role>India_Injection_Sales_Eng</role>
            <role>India_Injection_Sales_Eng_Bangalore</role>
            <role>India_Injection_Sales_Eng_Chandigarh</role>
            <role>India_Injection_Sales_Eng_Chennai</role>
            <role>India_Injection_Sales_Eng_Delhi</role>
            <role>India_Injection_Sales_Eng_Hyderabad</role>
            <role>India_Injection_Sales_Eng_Kolkata</role>
            <role>India_Injection_Sales_Eng_Mumbai</role>
            <role>India_Injection_Sales_Eng_Pune</role>
            <role>India_Injection_Support</role>
        </sharedTo>
    </listViews>
</CustomObject>